--- a/local/telegraf.conf
+++ b/local/telegraf.conf
@@ -1,6 +1,6 @@
 [global_tags]
   # the env tag is used by the application for multi-environments management
-  env = "docker_env"
+  env = "docker"
   # the label tag is an optional tag used by the application that you can use as additional label for the services or infrastructure
   label = "testing"
 
@@ -46,8 +46,8 @@
 
 # Due to security restrictions with latest versions of Zookeeper, metric collection has been switched to pure JMX collection
 # This is left for historical records purposes
-# [[inputs.zookeeper]]
-#  servers = ["nodes:2181"]
+[[inputs.zookeeper]]
+  servers = ["nodes:2181"]
 
 # Kafka brokers monitoring
 
