add cmak/kafka-manager as submodule (buildable using docker-compose build)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,6 +143,10 @@ services:
     hostname: splunk
     networks:
       - default
+    build:
+      context: ./cmak
+      dockerfile: dockerfile
+      args: {}
     expose:
       - 9000
     ports:
