--- a/local/serverclass.conf
+++ b/local/serverclass.conf
@@ -26,3 +26,5 @@ stateOnClient = enabled
 [serverClass:kafkaclass]
 whitelist.0 = *.kafka
 whitelist.1 = *.kafka_default
+whitelist.2 = *.$PROJECT_NAME
+whitelist.3 = *.$COMPOSE_PROJECT_NAME
