--- a/local/telegraf.conf
+++ b/local/telegraf.conf
@@ -1,8 +1,9 @@
 [global_tags]
   # the env tag is used by the application for multi-environments management
-  env = "docker"
+  env = "$NODE_ENV"
   # the label tag is an optional tag used by the application that you can use as additional label for the services or infrastructure
-  label = "testing"
+  label = "$NODE_LABEL"
+  nodename = "$HOSTNAME"
 
 [agent]
   interval = "10s"
@@ -27,7 +28,7 @@
 
 [[inputs.jolokia2_agent]]
   name_prefix = "zk_"
-  urls = ["http://nodes:8771/jolokia"]
+  urls = ["http://$HOSTNAME:8771/jolokia"]
 
 [[inputs.jolokia2_agent.metric]]
   name  = "quorum"
@@ -47,13 +48,13 @@
 # Due to security restrictions with latest versions of Zookeeper, metric collection has been switched to pure JMX collection
 # This is left for historical records purposes
 [[inputs.zookeeper]]
-  servers = ["nodes:2181"]
+  servers = ["$HOSTNAME:2181"]
 
 # Kafka brokers monitoring
 
 [[inputs.jolokia2_agent]]
   name_prefix = "kafka_"
-  urls = ["http://nodes:8772/jolokia"]
+  urls = ["http://$HOSTNAME:8772/jolokia"]
 
 [[inputs.jolokia2_agent.metric]]
   name         = "controller"
